# teachopencadd

./: .gitignore  MANIFEST.in  README.md  downloader.py  main.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_url.yml  docs.yml  format.yml  readme.yml  talktorial.yml
asset/pip_package_version/: T001.txt  T003.txt  T006.txt  T007.txt  T008.txt  T009.txt  T010.txt  T011.txt  T013.txt  T014.txt  T016.txt  T017.txt  T018.txt  T019.txt  T020.txt  T021.txt  T022.txt  T023.txt  T024.txt  T025.txt  T026.txt  T027.txt  T028.txt  T033.txt  T034.txt  T035.txt  T036.txt  T037.txt  T038.txt
devtools/: downloader.py  regenerate_readmes.py
docs/: README.md  api.rst  conf.py  contribute.rst  external_dependencies.rst  external_tutorials_collections.rst  index.rst  installing.rst  requirements.txt  user_guide.rst
teachopencadd/: __init__.py  cli.py  config.py  console.py  env.py  jupyter.py  runner.py  settings.py
teachopencadd/talktorials/T000_template/: README.md  requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T001_query_chembl/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T002_compound_adme/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T003_compound_unwanted_substructures/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T004_compound_similarity/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T005_compound_clustering/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T006_compound_maximum_common_substructures/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T007_compound_activity_machine_learning/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T008_query_pdb/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T009_compound_ensemble_pharmacophores/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T010_binding_site_comparison/: README.md  requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T011_query_online_api_webservices/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T012_query_klifs/: requirements.txt
teachopencadd/talktorials/T013_query_pubchem/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T014_binding_site_detection/: requirements.txt  talktorial.ipynb
teachopencadd/talktorials/T015_protein_ligand_docking/: README.md  requirements.txt  talktorial.ipynb
teachopencadd/tests/: test_talktorial.py
(+42 files in other folders)
